--- a/staticfiles/assets/css/pay.css
+++ b/staticfiles/assets/css/pay.css
@@ -172,3 +172,25 @@ body {
     background-attachment: fixed;
     font-family: 'Heebo', sans-serif;
 }
+
+.popup {
+    display: none;
+    position: relative;
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 14px;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    top: -60px;
+    width: 30%;
+}
+
+.show {
+    display: inline-block;
+    opacity: 1;
+}
